--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/project-2.jpg" alt="Liberty">
+	               	<img src="images/uni.png" alt="Liberty">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -419,7 +419,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/image_1.jpg"alt="Clouds">
+	               	<img src="images/net.png"alt="Clouds">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -435,7 +435,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/image_2.jpg" alt="Beetle">
+	               	<img src="images/veg.png" alt="Beetle">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -451,7 +451,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/image_3.jpg" alt="Lighthouse">
+	               	<img src="images/mp.png" alt="Lighthouse">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -467,7 +467,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/project-5.jpg" alt="Salad">
+	               	<img src="images/mess.png" alt="Salad">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -486,7 +486,7 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/project-2.jpg" alt="" />
+				     		<img src="images/uni.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -526,7 +526,7 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/image_1.jpg" alt="" />
+				     		<img src="images/net.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -546,7 +546,7 @@
 				   <div id="modal-04" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/image_2.jpg" alt="" />
+				     		<img src="images/veg.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -566,7 +566,7 @@
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/image_3.jpg" alt="" />
+				     		<img src="images/mp.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -586,7 +586,7 @@
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/project-5.jpg" alt="" />
+				     		<img src="images/mess.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
